--- a/fe/src/components/Header/Header.css
+++ b/fe/src/components/Header/Header.css
@@ -3,6 +3,8 @@
   height: 70px;
   overflow: hidden;
   background: rgba(0, 0, 0, 0);
+  position: relative; /* Ensure it flows naturally in the document */
+  width: 100%;
 }
 
 .header .main {
@@ -76,10 +78,7 @@
   left: 0;
   width: 48px;
   height: 48px;
-  background: url(https://image-resource.creatie.ai/155865189425801/155865189425803/75b3ef6bdbfeed6aa6499fc1a28b8188.png),
-    rgba(0, 0, 0, 0);
   object-fit: cover;
-  background-size: cover;
 }
 
 .header .div-1 {
