--- a/fe/src/components/Footer/Footer.css
+++ b/fe/src/components/Footer/Footer.css
@@ -1,11 +1,12 @@
 .footer {
-  width: 1500px;
-  height: 432px;
+  width: 100%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 64px 0;
+  padding: 50px 0;
+  margin-top: 20px;
   background: #000000;
 }
 
